@@ -1,17 +1,22 @@
 # Generated by roxygen2: do not edit by hand
 
 export(colBlockApply)
+export(isFileBackedMatrix)
+export(realizeFileBackedMatrix)
 export(rowBlockApply)
 export(toCsparse)
 export(whichNonZero)
 exportMethods(whichNonZero)
 import(methods)
+importClassesFrom(DelayedArray,DelayedMatrix)
 importClassesFrom(DelayedArray,SparseArraySeed)
 importClassesFrom(Matrix,CsparseMatrix)
 importClassesFrom(Matrix,TsparseMatrix)
 importClassesFrom(Matrix,dgCMatrix)
 importClassesFrom(Matrix,lgCMatrix)
+importClassesFrom(Matrix,sparseMatrix)
 importFrom(BiocGenerics,dims)
+importFrom(BiocGenerics,path)
 importFrom(DelayedArray,DelayedArray)
 importFrom(DelayedArray,DummyArrayGrid)
 importFrom(DelayedArray,blockApply)
@@ -20,6 +25,7 @@ importFrom(DelayedArray,contentIsPristine)
 importFrom(DelayedArray,getAutoBPPARAM)
 importFrom(DelayedArray,getAutoBlockLength)
 importFrom(DelayedArray,isPristine)
+importFrom(DelayedArray,is_sparse)
 importFrom(DelayedArray,makeNindexFromArrayViewport)
 importFrom(DelayedArray,netSubsetAndAperm)
 importFrom(DelayedArray,nseed)
@@ -27,6 +33,7 @@ importFrom(DelayedArray,nzdata)
 importFrom(DelayedArray,nzindex)
 importFrom(DelayedArray,rowAutoGrid)
 importFrom(DelayedArray,seed)
+importFrom(DelayedArray,seedApply)
 importFrom(DelayedArray,setAutoBPPARAM)
 importFrom(DelayedArray,set_grid_context)
 importFrom(DelayedArray,type)
